--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "npm run db:init && node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "db:init": "npx prisma migrate deploy || npx prisma db push",
     "prisma:migrate": "cross-env DATABASE_URL=\"postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@localhost:5432/${POSTGRES_DB}?schema=public\" npx prisma migrate dev --name init",
     "test": "jest",
     "test:watch": "jest --watch",
