--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/multer": "^2.0.0",
     "@types/uuid": "^10.0.0",
     "axios": "^1.12.2",
+    "class-sanitizer": "^1.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "helmet": "^8.1.0",
