--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "npm run db:init && node dist/main",
+    "start:prod": "npm run db:init && node dist/src/main.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "db:init": "npx prisma migrate deploy || npx prisma db push",
     "prisma:migrate": "cross-env DATABASE_URL=\"postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@localhost:5432/${POSTGRES_DB}?schema=public\" npx prisma migrate dev --name init",
@@ -25,6 +25,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.899.0",
     "@aws-sdk/client-sqs": "^3.899.0",
+    "@aws-sdk/lib-storage": "^3.908.0",
     "@aws-sdk/s3-request-presigner": "^3.899.0",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
@@ -33,9 +34,11 @@
     "@nestjs/swagger": "^11.2.0",
     "@nestjs/throttler": "^6.4.0",
     "@prisma/client": "^6.16.3",
+    "@types/busboy": "^1.5.4",
     "@types/multer": "^2.0.0",
     "@types/uuid": "^10.0.0",
     "axios": "^1.12.2",
+    "busboy": "^1.6.0",
     "class-sanitizer": "^1.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
