--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@aws-sdk/client-sqs": "^3.899.0",
     "@aws-sdk/lib-storage": "^3.908.0",
     "@aws-sdk/s3-request-presigner": "^3.899.0",
+    "@nestjs/cache-manager": "^3.0.1",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
@@ -39,6 +40,8 @@
     "@types/uuid": "^10.0.0",
     "axios": "^1.12.2",
     "busboy": "^1.6.0",
+    "cache-manager": "^7.2.4",
+    "cache-manager-redis-store": "^3.0.1",
     "class-sanitizer": "^1.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
