--- a/.gitignore
+++ b/.gitignore
@@ -4,15 +4,14 @@
 /build
 /docs
 .cursor
-/proj-docs
 .vscode
 .amazonq
 .gemini
 GEMINI.md
-to-do-by-gemini.md
+architecture.md
 
 # Logs
-logs
+/logs
 *.log
 npm-debug.log*
 pnpm-debug.log*
