--- a/package.json
+++ b/package.json
@@ -46,6 +46,10 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "helmet": "^8.1.0",
+    "nestjs-pino": "^4.4.1",
+    "pino-http": "^10.5.0",
+    "pino-pretty": "^11.2.1",
+    "pino-roll": "^4.0.0",
     "prisma": "^6.16.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
