--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.899.0",
-    "@aws-sdk/client-sqs": "^3.899.0",
     "@aws-sdk/lib-storage": "^3.908.0",
     "@aws-sdk/s3-request-presigner": "^3.899.0",
+    "@nestjs/bull": "^11.0.4",
     "@nestjs/cache-manager": "^3.0.1",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
@@ -39,6 +39,7 @@
     "@types/multer": "^2.0.0",
     "@types/uuid": "^10.0.0",
     "axios": "^1.12.2",
+    "bullmq": "^5.61.0",
     "busboy": "^1.6.0",
     "cache-manager": "^7.2.4",
     "cache-manager-redis-store": "^3.0.1",
