refactor(worker): implement validated configuration

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -95,7 +95,7 @@ services:
       MINIO_REGION: ${MINIO_REGION}
       MINIO_ROOT_USER: ${MINIO_ROOT_USER}
       MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD}
-      IMAGORVIDEO_URL: http://imagorvideo:8080
+      IMAGORVIDEO_URL: ${IMAGORVIDEO_URL}
       PORT: ${PORT}
       MAX_FILE_SIZE_IMAGE_MB: ${MAX_FILE_SIZE_IMAGE_MB}
       MAX_FILE_SIZE_VIDEO_MB: ${MAX_FILE_SIZE_VIDEO_MB}
