feat(upload): Implement correct stream handling for file uploads and imagorvideo endpoint fix

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,7 +66,7 @@ services:
       # S3 loader — where get the originals
       IMAGOR_S3_LOADER_BUCKET: ${MINIO_BUCKET}
       IMAGOR_S3_LOADER_REGION: ${MINIO_REGION}
-      IMAGOR_S3_LOADER_ENDPOINT: ${MINIO_ENDPOINT}
+      IMAGOR_S3_LOADER_ENDPOINT: http://minio:9000
       IMAGOR_S3_LOADER_ACCESS_KEY_ID: ${MINIO_ROOT_USER}
       IMAGOR_S3_LOADER_SECRET_ACCESS_KEY: ${MINIO_ROOT_PASSWORD}
       IMAGOR_S3_LOADER_PATH_STYLE: true
@@ -75,7 +75,7 @@ services:
       IMAGOR_RESULT_STORAGE_PATH_STYLE: true
       IMAGOR_S3_STORAGE_BUCKET: ${MINIO_BUCKET}
       IMAGOR_S3_STORAGE_REGION: ${MINIO_REGION}
-      IMAGOR_S3_STORAGE_ENDPOINT: ${MINIO_ENDPOINT}
+      IMAGOR_S3_STORAGE_ENDPOINT: http://minio:9000
       IMAGOR_S3_STORAGE_PATH_STYLE: true
       # MinIO credentials
       AWS_ACCESS_KEY_ID: ${MINIO_ROOT_USER}
